# freedoko

./: AUTHORS  CMakeLists.txt  ChangeLog  LIESMICH  Makefile  Makefile.install.directories  Makefile.os  Makefile.version  README  Version
doc/: Bugs  CMakeLists.txt  Makefile  Makefile.latex  Roadmap  freedoko.sgml  hpux.required_libs-ia64.txt
doc/Implementation/: HIG.txt  Schweine.txt  Zugriff.html
doc/de/: CMakeLists.txt  DDV_Kurzregeln.tex  DDV_Turnierregeln.tex  FreeDoko.sty  FreeDoko_Konzept.tex  FreeDoko_Regeln.tex  GPL.de  Kurzregeln.tex  LiesMich.html  LiesMich.txt  Makefile  SuSE  Windows  Windows.kompilieren  subversion
doc/en/: CMakeLists.txt  FreeDoko AI.rtf  FreeDoko_concept.tex  FreeDoko_rules.tex  Makefile  README.html  README.txt  Windows  shortrules.tex
src/: CMakeChecks.txt  CMakeLists.txt  CMakeMacros.txt  Doxyfile  Ideas  Makefile  Makefile.local.template  Makefile.modules  Makefile.objects  Makefile.os  Makefile.rules  Makefile.subdir  ToDo  _autotest.bat  _check_references.bat  _compile.bat  autotest.heuristics.sh  autotest.runtime.sh  autotest.sh  basistypes.cpp  basistypes.h  config.h.in  constants.cpp  constants.h  debug.cpp  debug.h  exception.h  freedoko.cpp  party.with-nines  party.without-nines  runtime.cpp  runtime.h  runtime.statistics  testparty  testparty.runtime  utils.cpp  utils.h  windres.rc
src/card/: CMakeLists.txt  Makefile  Makefile.objects  card.color.cpp  card.cpp  card.h  card.value.cpp  card_counter.cpp  card_counter.h  cardvector.h  constants.h  hand.cpp  hand.h  hand_card.cpp  hand_card.h  hand_cards.cpp  hand_cards.h  sorted_hand.cpp  sorted_hand.h  tcolor_counter.cpp  tcolor_counter.h  trick.cpp  trick.h  weighted_card_list.cpp  weighted_card_list.h
src/class/: CMakeLists.txt  Makefile
src/class/getopt/: CMakeLists.txt  Makefile  bugs  getopt.cpp  getopt.h  main.cpp  option.cpp
src/class/readconfig/: CMakeLists.txt  Makefile  main.cpp  readconfig.cpp  readconfig.h
src/game/: CMakeLists.txt  Makefile  Makefile.objects  constants.h  exception.h  game.announcement.cpp  game.cpp  game.gameplay.cpp  game.h  game.info.cpp  game.marriage.cpp  game.player.cpp  game.swines.cpp  game.team.cpp  game.trick.cpp  game_summary.cpp  game_summary.h  gameplay.cpp  gameplay.h  gameplay_action.cpp  gameplay_action.h  gameplay_actions.h  reservation.cpp  reservation.h  specialpoint.cpp  specialpoint.h
src/game/gameplay_actions/: CMakeLists.txt  Makefile  Makefile.objects  announcement.cpp  announcement.h  base_cards.cpp  base_cards.h  card_played.cpp  card_played.h  check.cpp  check.h  constants.h  genscher.cpp  genscher.h  marriage.cpp  marriage.h  player1.cpp  player1.h  poverty.h  pure.cpp  pure.h  reservation.cpp  reservation.h  swines.h  trick_full.cpp  trick_full.h  trick_open.h  trick_taken.h
src/misc/: CMakeLists.txt  Makefile  Makefile.objects  bug_report.cpp  bug_report.h  constants.h  lounge.cpp  lounge.h  references_check.cpp  references_check.h  setting.cardsorder.cpp  setting.cardsorder.h  setting.cpp  setting.h  setting.theme.cpp  setting.theme.h  translation.cpp  translation.h  translations.h  translator.cpp  translator.h
src/network/: CMakeLists.txt  Makefile  Makefile.objects  actor.cpp  actor.h  connection.cpp  connection.h  constants.h  exceptions.h  interpreter.cpp  interpreter.h  listener.cpp  listener.h  receiver.h  sender.h  server.cpp  server.h  server.os.cpp  types.cpp  types.h
src/network/DokoLounge/: Makefile  Makefile.objects  constants.h  interpreter.cpp  interpreter.h  receiver.cpp  receiver.h  sender.cpp  sender.game.cpp  sender.h  sender.lounge.cpp  sender.party.cpp
src/network/FreeDoko/: CMakeLists.txt  Makefile  Makefile.objects  constants.h  interpreter.cpp  interpreter.h  receiver.cpp  receiver.h  sender.cpp  sender.game.cpp  sender.h  sender.party.cpp
src/network/actor/: CMakeLists.txt  Makefile  Makefile.objects  actor.game.cpp  actor.party.cpp  actor.rule.cpp  constants.h
src/network/gnet/: CMakeLists.txt  Makefile  Makefile.objects  addresses.cpp  addresses.h  connection.cpp  connection.h  constants.h  listener.cpp  listener.h
src/os/: CMakeLists.txt  Makefile  Makefile.objects  auto_bug_report.cpp  auto_bug_report.h  bug_report.cpp  bug_report.h  bug_report_replay.cpp  bug_report_replay.h  c.subdir  chatter.cpp  chatter.h  constants.h  gameplay.cpp  gameplay.h  os.cpp  os.h  party_points.cpp  party_points.h  seed.cpp  seed.h
src/party/: CMakeLists.txt  Makefile  Makefile.objects  constants.h  party.cpp  party.h  rule.cpp  rule.h
src/player/: CMakeLists.txt  Makefile  Makefile.objects  aiconfig.cpp  aiconfig.h  constants.h  heuristicsmap.cpp  heuristicsmap.h  namegen.cpp  namegen.h  player.cpp  player.h  playersDb.cpp  playersDb.h
src/player/ai/: CMakeLists.txt  HeuristicInterface.h  Makefile  Makefile.objects  VirtualGamesInterface.h  ai.cpp  ai.h  aiDb.cpp  aiDb.h  cards_information.cpp  cards_information.h  cards_information.heuristics.cpp  cards_information.heuristics.h  cards_information.of_player.cpp  cards_information.of_player.h  constants.h  gametree.cpp  gametree.h  heuristics.best_winning.cpp  heuristics.cpp  heuristics.h  team_information.cpp  team_information.h  team_information.heuristics.cpp  team_information.heuristics.h  (+8 more)
src/player/ai.dummy/: CMakeLists.txt  Makefile  ai.cpp  ai.h  constants.h
src/player/ai.random/: Makefile  Makefile.objects  ai.cpp  ai.h  constants.h
src/sound/: CMakeLists.txt  Makefile  Makefile.objects  alut.cpp  alut.h  command.cpp  command.h  constants.h  playsound.cpp  playsound.h  sound.cpp  sound.h
src/text/: Altenburg.dos.string  Altenburg.string  CMakeLists.txt  Makefile  gpl.dos.string  gpl.string  help.dos.string  help.string  to_dos.cmake
src/ui/: CMakeLists.txt  Makefile  Makefile.objects  constants.h  help.cpp  help.h  ui.cpp  ui.dummy.cpp  ui.dummy.h  ui.h  ui.wrap.cpp  ui.wrap.h
src/utils/: CMakeLists.txt  Makefile  Makefile.objects  compare.h  date.cpp  date.h  file.cpp  file.h  private.h  stop_watch.cpp  stop_watch.h  string.cpp  string.h  time.cpp  time.h  utils.h  version.cpp  version.h  windows.cpp  windows.h
(+370 files in other folders)
