add_library(fd_network STATIC
actor/actor.party.cpp
actor/actor.game.cpp
actor/actor.rule.cpp
server.os.cpp
listener.cpp
FreeDoko/parser/rules.cpp
FreeDoko/parser/lines.cpp
FreeDoko/parser/gameplay_actions.cpp
FreeDoko/sender.game.cpp
FreeDoko/interpreter.cpp
FreeDoko/sender.cpp
FreeDoko/sender.party.cpp
FreeDoko/receiver.cpp
gnet/addresses.cpp
gnet/listener.cpp
gnet/connection.cpp
actor.cpp
server.cpp
types.cpp
connection.cpp
)

