add_subdirectory(widgets)
set(LOCAL_SOURCES
  utils.cpp
  base.cpp
  ui.cpp
  ui.init.cpp
  ui.network.cpp
  ui.party.cpp
  ui.game.cpp
  ui.poverty.cpp
  ui.game.gameplay.cpp
  ui.trick.cpp
  ui.update.cpp
  thrower.cpp
  translations.cpp
  cards.cpp
  icons.cpp
  first_run.cpp
  program_updated.cpp
  splash_screen.cpp
  main_window.cpp
  menu.cpp
  party_summary.cpp
  party_settings.cpp
  players.cpp
  player.cpp
  aiconfig.cpp
  rules.cpp
  game_finished.cpp
  game_summary.cpp
  game_review.cpp
  party_points.cpp
  game_overview.cpp
  party_points.graph.cpp
  party_finished.cpp
  players_db.cpp
  table.cpp
  table.parts.cpp
  table.draw.cpp
  reservation.cpp
  poverty.cpp
  trick.cpp
  htin.cpp
  hand.cpp
  trickpile.cpp
  icongroup.cpp
  name.cpp
  gameinfo_dialog.cpp
  gameinfo.cpp
  gameinfo.gametype.cpp
  gameinfo.marriage.cpp
  gameinfo.genscher.cpp
  gameinfo.announcement.cpp
  gameinfo.swines.cpp
  gameinfo.hyperswines.cpp
  genscher_selection.cpp
  trick_drawing.cpp
  trick_summary.cpp
  full_trick.cpp
  last_trick.cpp
  card_suggestion.cpp
  chatter.cpp
  help.cpp
  license.cpp
  changelog.cpp
  support.cpp
  about.cpp
  preferences.cpp
  preferences.cards_order.cpp
  network.cpp
  network_log.cpp
  bug_report.cpp
  bug_report_replay.cpp
  gameplay_actions.cpp
  error.cpp
  game_debug.cpp
)
toglobalsources(${LOCAL_SOURCES})
